style: format code